<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="55dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/ContentView">
    </TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date_created"
            android:id="@+id/textView3"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center"
            android:text="Date text"
            android:id="@+id/DateView"
            android:layout_weight="0.85"/>

        <Button
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="Complete"
            android:id="@+id/completeHabit"
            android:layout_row="1"
            android:layout_column="13" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Days Active:"
        android:id="@+id/daysText"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_weight="0.82"
        android:paddingLeft="10dp">

        <ListView
            android:layout_width="119dp"
            android:layout_height="300dp"
            android:id="@+id/setDaysView"
            android:choiceMode="none" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.46">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_weight="0.40">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/times_completed"
                    android:layout_row="0"
                    android:layout_column="15"
                    android:layout_weight="0.10" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="0dp"
                    android:id="@+id/nCompletes"
                    android:text="##"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>


            <ListView
                android:layout_width="156dp"
                android:layout_height="125dp"
                android:id="@+id/pastCompletes"
                android:layout_gravity="center_horizontal"
                android:choiceMode="none" />

            <Button
                android:layout_width="157dp"
                android:layout_height="58dp"
                android:text="Delete Last Completion"
                android:id="@+id/deletePast"
                android:layout_gravity="right" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/saveButton"
            android:layout_weight="0.33" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/deleteHabit"
            android:layout_weight="0.33"
            android:layout_row="1"
            android:layout_column="14" />
    </LinearLayout>

</LinearLayout>